# cv-sport-geometry

./: .gitignore  README.md  create_test_summary.py  flow-chart.drawio  main.py  prod_params.json  pyproject.toml  ruff.toml  tennis-court-detection.ipynb  test.config.json  testowanie copy.ipynb  testowanie.py
config/: run.config.json  test.config.json
results/tests/: test_summary_2025-10-23-12-38-41.csv
scripts/: create_test_summary.py  test.py
src/utils/: common.py  const.py  corners.py  court_finder.py  func.py  intersection.py  lines.py  point.py  schemas.py
utils/: const.py  corners.py  func.py  lines.py  schemas.py
