[project]
name = "cv-sport-geometry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ruff>=0.12.7",
]
